[package]
name = "few"
version = "0.0.1"
authors = ["Rabbit <yfhj1990@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
dodrio = "0.2.0"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.11"
wasm-bindgen = "0.2.55"
wee_alloc = "0.4.5"
lazy_static = "1.4.0"
typed-html = { git = "https://github.com/bodil/typed-html#4c13ecca", features = ["dodrio_macro"] }

[dependencies.web-sys]
version = "0.3.32"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.5"

[profile.release]
lto = true
opt-level = 's'